@@ -39,6 +39,8 @@ next version - not yet released
  FIXED  : Ticket #1212, Playing "Recent File" clears playlist, even though playlist contains file
  FIXED  : Ticket #1220, MPC fails to play specific MKV files
  FIXED  : Ticket #1321, IMpegSplitterFilter uses CString - should be WCHAR or BSTR instead
+ FIXED  : Ticket #1383, Fix OSD positioning: messages displayed at the top-right of the window
+          before going fullscreen were incorrectly positioned after switching to fullscreen
  FIXED  : DVB, Channel switching for H-264 services is more stable now
  FIXED  : Some OSD messages were not translatable
 
